--- a/bootstrap.css
+++ b/bootstrap.css
@@ -4624,13 +4624,14 @@ input[type="button"].btn-block {
 }
 
 .navbar-brand {
-  display: inline-block;
-  padding-top: 0.32421875rem;
-  padding-bottom: 0.32421875rem;
-  margin-right: 1rem;
-  font-size: 1.171875rem;
-  line-height: inherit;
-  white-space: nowrap;
+    display: inline-block;
+    padding-top: 0.32421875rem;
+    padding-bottom: 0.32421875rem;
+    margin-right: 1rem;
+    font-size: 1.171875rem;
+    line-height: inherit;
+    white-space: nowrap;
+    font-family: 'Yellowtail', cursive;
 }
 
 .navbar-brand:hover, .navbar-brand:focus {
