Update 0.2.4.1 - Changing navbar

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4032,6 +4032,7 @@ textarea.form-control-lg {
   padding-bottom: 0.3125rem;
   margin-right: 1rem;
   font-size: 1.25rem;
+  font-family: 'Yellowtail', cursive;
   text-decoration: none;
   white-space: nowrap;
 }
