--- a/bootstrap.css
+++ b/bootstrap.css
@@ -106,6 +106,14 @@ h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
 h1, .h1 {
   font-size: calc(1.375rem + 1.5vw);
 }
+
+.h1-about {
+  text-align: center;
+  padding-top: 3.5rem;
+  padding-bottom: 3.5rem;
+  font-family: 'Montserrat', sans-serif;
+}
+
 @media (min-width: 1200px) {
   h1, .h1 {
     font-size: 2.5rem;
@@ -124,6 +132,13 @@ h2, .h2 {
 h3, .h3 {
   font-size: calc(1.3rem + 0.6vw);
 }
+.h3-about {
+  text-align: center;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  font-family: 'Montserrat', sans-serif;
+}
+
 @media (min-width: 1200px) {
   h3, .h3 {
     font-size: 1.75rem;
@@ -150,6 +165,10 @@ h6, .h6 {
 p {
   margin-top: 0;
   margin-bottom: 1rem;
+}
+
+.p-about {
+  text-align: justify;
 }
 
 abbr[title],
@@ -633,6 +652,7 @@ progress {
   padding-left: var(--bs-gutter-x, 0.75rem);
   margin-right: auto;
   margin-left: auto;
+  padding-bottom: 5rem;
 }
 
 @media (min-width: 576px) {
