--- a/bootstrap.css
+++ b/bootstrap.css
@@ -75,7 +75,7 @@ body {
   margin: 0;
   font-family: var(--bs-body-font-family);
   font-size: var(--bs-body-font-size);
-  font-weight: var(--bs-body-font-weight);
+  /* font-weight: var(--bs-body-font-weight); */
   line-height: var(--bs-body-line-height);
   color: #aaa;
   text-align: var(--bs-body-text-align);
@@ -108,6 +108,13 @@ h1, .h1 {
 }
 
 .h1-about {
+  text-align: center;
+  padding-top: 3.5rem;
+  padding-bottom: 3.5rem;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.h1-portfolio {
   text-align: center;
   padding-top: 3.5rem;
   padding-bottom: 3.5rem;
@@ -504,6 +511,7 @@ progress {
 .lead {
   font-size: 1.25rem;
   font-weight: 300;
+  text-decoration: #ffff !important;
 }
 
 .display-1 {
@@ -652,7 +660,7 @@ progress {
   padding-left: var(--bs-gutter-x, 0.75rem);
   margin-right: auto;
   margin-left: auto;
-  padding-bottom: 5rem;
+  padding-bottom: 1.5rem;
 }
 
 @media (min-width: 576px) {
@@ -684,7 +692,7 @@ progress {
   --bs-gutter-x: 1.5rem;
   --bs-gutter-y: 0;
   display: flex;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
   margin-top: calc(-1 * var(--bs-gutter-y));
   margin-right: calc(-0.5 * var(--bs-gutter-x));
   margin-left: calc(-0.5 * var(--bs-gutter-x));
@@ -2577,6 +2585,11 @@ textarea.form-control-lg {
   pointer-events: none;
   filter: none;
   opacity: 0.65;
+}
+
+.btn-view {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 .form-range {
