--- a/bootstrap.css
+++ b/bootstrap.css
@@ -107,6 +107,14 @@ h1, .h1 {
   font-size: calc(1.375rem + 1.5vw);
 }
 
+.h1-quote {
+  text-align: center;
+  padding-top: 5rem;
+  padding-bottom: 1rem;
+  font-family: 'Montserrat', sans-serif;
+  font-family: 'Playfair Display', serif;
+}
+
 .h1-about {
   text-align: center;
   padding-top: 3.5rem;
@@ -119,6 +127,14 @@ h1, .h1 {
   padding-top: 3.5rem;
   padding-bottom: 3.5rem;
   font-family: 'Montserrat', sans-serif;
+}
+
+.h2-quote {
+  text-align: center;
+  padding-top: 1rem;
+  padding-bottom: 3.5rem;
+  font-family: 'Montserrat', sans-serif;
+  font-family: 'Playfair Display', serif;
 }
 
 @media (min-width: 1200px) {
