--- a/css/styles.css
+++ b/css/styles.css
@@ -85,6 +85,20 @@
   box-sizing: border-box;
 }
 
+@media screen and (max-width: 767px) {
+  .d-flex .align-items-center {
+    display: flex;
+    flex-direction: column;
+  }
+  .d-flex .align-items-center .image-card-wrapper {
+    order: 2;
+  }
+
+  .d-flex .align-items-center .intrinsic {
+    order: 3;
+  }
+}
+
 @media (prefers-reduced-motion: no-preference) {
   :root {
     scroll-behavior: smooth;
@@ -7878,7 +7892,11 @@ textarea.form-control-lg {
 }
 
 .p-5 {
-  padding: 3rem !important;
+  padding-top: 3rem !important;
+  padding-left: 2rem !important;
+  padding-right: 2rem !important;
+  padding-bottom: 1rem;
+  text-align: distribute;
 }
 
 .px-0 {
